coco-rs/vercel-ai/xai/tests/snapshots/xai_cassette_replay__chat_tool_call_stream_shape.snap
---
source: vercel-ai/xai/tests/xai_cassette_replay.rs
assertion_line: 172
expression: rle_shape(&parts)
---
streamStart
response-metadata
reasoningStart
reasoningDelta x5
reasoningEnd
toolInputStart
toolInputDelta
toolInputEnd
tool-call
finish
